--- a/homework10/index-hw10.html
+++ b/homework10/index-hw10.html
@@ -32,11 +32,11 @@
                <!-- <img class="baner-img" src="./img/Frame (1).png"> -->
             </div>
         </div>
-        <div class="blok1" (z-index: 7)>
-            <!-- <img class="blok1-img" src="./img/Rectangle.png" (z-index: 4)> -->
-            <div class="blok1-left">
-                    <div class="blok1-left-img"(z-index: 6)></div>
-                   <!--  <div class="blok1-left-1-grid"(z-index: 4)>
+        <div class="blok1">
+            <div class="blok1-left"(z-index: 4)>
+                <img class="blok1-img" src="./img/Rectangle.png"(z-index: 3)>
+                    <!-- <div class="blok1-left-img"(z-index: 4)></div>
+                     <div class="blok1-left-1-grid">
                         <div class="blok1-element1">
                             <p class="blok1-element1-text1">Sat, 12:35pm</p>
                             <p class="blok1-element1-text2">Arsenal v
@@ -44,15 +44,15 @@
                             <p class="blok1-element1-text3">Friendly Match</p>                
                         </div>
                         <div class="blok1-element2">
-                            <img class="blok1-element2-img1" src="./img/arsenal-f-c-seeklogo.com.png" alt="" (z-index: 1)>
-                            <img class="blok1-element2-img2" src="./img/chelsea-fc.png" alt="" (z-index: 2)>
+                            <img class="blok1-element2-img1" src="./img/arsenal-f-c-seeklogo.com.png" alt="">
+                            <img class="blok1-element2-img2" src="./img/chelsea-fc.png" alt="">
                         </div>
                         <div class="blok1-element3">
                             <p class="blok1-element3-text1">Turn on all match notifications</p>
                             <img class="blok1-element3-icon1" src="">
                         </div>
                     </div>    
-                    <div class="blok1-element4"(z-index: 3)>
+                    <div class="blok1-element4">
                         <img class="blok1-element4-img1" src="./img/SAMPLE02.png" alt="">
                     </div> -->    
             </div> 
@@ -119,8 +119,8 @@
             <h1 class="slider-text1">What Our Users Say</h1>
                 <div class="slider-container">
                     <!--<img clas="slide-nav-left" src="./img/Ellipse.png" alt=""> -->
-                    <div class="slid-1">
-                        <div class="slid-1-1">
+                    <div class="slid-1" (z-index: 1)>
+                        <div class="slid-1-1" (z-index: 2)>
                             <img class="slid-1-1-foto" src="./img/foto1.png">
                             <p class="slid-1-1-text">Good for scores and commentary but the team lineups have stopped working.</p>
                         </div>
@@ -153,7 +153,6 @@
                             <div class="slid-5-1">
                                 <img class="slid-5-1-foto" src="./img/foto3.png">
                                 <p class="slid-5-1-text2">Sarah Akinuli</p>
-                                <img class="slid-5-1-twiter" src="./img/twiter.png">
                             </div>
                             <p class="slid-5-2-text">Good for watching the goals and great for highlights instead of waiting till 10:30 before you can watch highlights on March of the day also no need of sky go</p>
                     </div>
