--- a/Test/homework100/index-hw100.html
+++ b/Test/homework100/index-hw100.html
@@ -18,20 +18,20 @@
 </head>
 <body>
     <div class="container">
-        <header class="header">
-            <div class="header-1">
+        <div class="baner">
+            <div class="baner-1">
                 <img class="logo-1" src="./img/LOGO (1).png">
-                <h1 class="header-text-1"> Get a personalized football experience tailored just for you</h1>
-                <p class="header-text-2">Achieve super-fan status by getting tailored updates and up-to-the-minute information on your team.</p>
+                <h1 class="baner-text-1"> Get a personalized football experience tailored just for you</h1>
+                <p class="baner-text-2">Achieve super-fan status by getting tailored updates and up-to-the-minute information on your team.</p>
                 <div class="apps-1">
                     <img class="app-1" src="./img/Apple Store.png">
                     <img class="app-2" src="./img/Google Play.png">
                 </div>
             </div>
-            <div class="header-2">
-                <!-- <img class="header-img" src="./img/Frame (1).png"> -->
+            <div class="baner-2">
+               <!-- <img class="baner-img" src="./img/Frame (1).png"> -->
             </div>
-        </header>
+        </div>
         <div class="blok1">
             <div class="blok1-left"(z-index: 4)>
                 <img class="blok1-img" src="./img/Rectangle.png"(z-index: 3)>
