--- a/Test/index.html
+++ b/Test/index.html
@@ -8,7 +8,23 @@
     <title>Test</title>
 </head>
 <body>
-  <div class="Background" (z-index:1)></div>
+    <div class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+
+
+  <!-- <div class="Background" (z-index:1)></div>
   <div class="gradient" (z-index:2)></div>
 
  <!-- <div class="blok1">
@@ -35,12 +51,12 @@
                 <img class="blok1-element4-img1" src="./img/SAMPLE02.png" alt="">
             </div>   
     </div>   
-</div>    -->                  
+</div>                  
 
 <div class="blok1" (z-index: 4)>
     <img class="blok1-img" src="./img/Rectangle.png" (z-index: 3>
+    <div class="blok1-left-img"(z-index: 4)></div>
     <div class="blok1-left">
-            <!-- <div class="blok1-left-img"(z-index: 4)></div>
              <div class="blok1-left-1-grid">
                 <div class="blok1-element1">
                     <p class="blok1-element1-text1">Sat, 12:35pm</p>
@@ -59,7 +75,7 @@
             </div>    
             <div class="blok1-element4">
                 <img class="blok1-element4-img1" src="./img/SAMPLE02.png" alt="">
-            </div> -->    
+            </div>
     </div> 
     <div class="blok1-right">
         <p class="blok1-2-text-1"> WHAT IT DOES </p>
@@ -67,7 +83,8 @@
         <p class="blok1-2-text-3"> The Guardian Live Scores app is your go to app for live scores and watching Premier League goals… Get in there, what a result!
             As well as videos of all the goals, you can watch match highlights, check out the latest scores and results and stay bang-up-to-date with the big football stories from The Guardian publication. </p>
         <p class="blok1-2-text-4">Learn more</p>    
-    </div>    
+    </div> --> 
+
 </div>                 
 </body>
 </html>
