--- a/homework11/index-hw11.html
+++ b/homework11/index-hw11.html
@@ -17,13 +17,31 @@
         </div>    
     </div>
     <div class="section-2">
-        <div class="ellips-1"></div>
-        <div class="ellips-2"></div>
-        <div class="ellips-3"></div>
-        <div class="ellips-4"></div>
-        <div class="ellips-5"></div>
-        <div class="ellips-6"></div>
-        <div class="ellips-7"></div>
+        <div class="ellips">
+            <div class="ellips-1-left"></div>
+            <div class="ellips-2"></div>
+            <div class="ellips-3"></div>
+            <div class="ellips-4"></div>
+            <div class="ellip-5"></div>
+            <div class="ellips-6"></div>
+            <div class="ellips-7-right"></div>
+        </div>    
+        <!-- <div class="shadow">
+            <div class="shadow-1-left"></div>
+            <div class="shadow-2"></div>
+            <div class="shadow-3"></div>
+            <div class="shadow-4"></div>
+            <div class="shadow-5"></div>
+            <div class="shadow-6"></div>
+            <div class="shadow-7-right"></div>
+        </div>
     </div>
+    <div id="nav-container">
+        <div class="toggle-icon">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+    </div> -->
 </body>
 </html>
