--- a/Test/index.html
+++ b/Test/index.html
@@ -1,113 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles-test.css">
-    <title>Test</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles-test.css"/>
 </head>
-<body>
-
-    <div aria-busy="true" aria-label="Loading" role="progressbar" class="container">
-        <div class="swing">
-          <div class="swing-l"></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div class="swing-r"></div>
-        </div>
-        <div class="shadow">
-          <div class="shadow-l"></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div class="shadow-r"></div>
-        </div>
-       </div>
-   <!-- <div class="container">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+  <body>
+    <div class="container-sm">
+      <div class="row">
+        <div class="col-12 col-md-8 col-lg-4 one"></div>
+        <div class="col-12 col-md-2 col-lg-4 two"></div>
+        <div class="col-12 col-md-2 col-lg-4 three"></div>
+      </div>
     </div>
-
-
-  <!-- <div class="Background" (z-index:1)></div>
-  <div class="gradient" (z-index:2)></div>
-
- <!-- <div class="blok1">
-     <img class="blok1-img" src="./img/Rectangle.png" (z-index: 4)>
-    <div class="blok1-left" (z-index: 4)>
-            <div class="blok1-left-img"(z-index: 3)></div>
-           <!--  <div class="blok1-left-1-grid"(z-index: 4)>
-                <div class="blok1-element1">
-                    <p class="blok1-element1-text1">Sat, 12:35pm</p>
-                    <p class="blok1-element1-text2">Arsenal v
-                        Chelsea</p>
-                    <p class="blok1-element1-text3">Friendly Match</p>                
-                </div>
-                <div class="blok1-element2">
-                    <img class="blok1-element2-img1" src="./img/arsenal-f-c-seeklogo.com.png" alt="" (z-index: 1)>
-                    <img class="blok1-element2-img2" src="./img/chelsea-fc.png" alt="" (z-index: 2)>
-                </div>
-                <div class="blok1-element3">
-                    <p class="blok1-element3-text1">Turn on all match notifications</p>
-                    <img class="blok1-element3-icon1" src="">
-                </div>
-            </div>    
-            <div class="blok1-element4"(z-index: 3)>
-                <img class="blok1-element4-img1" src="./img/SAMPLE02.png" alt="">
-            </div>   
-    </div>   
-</div>                  
-
-<div class="blok1" (z-index: 4)>
-    <img class="blok1-img" src="./img/Rectangle.png" (z-index: 3>
-    <div class="blok1-left-img"(z-index: 4)></div>
-    <div class="blok1-left">
-             <div class="blok1-left-1-grid">
-                <div class="blok1-element1">
-                    <p class="blok1-element1-text1">Sat, 12:35pm</p>
-                    <p class="blok1-element1-text2">Arsenal v
-                        Chelsea</p>
-                    <p class="blok1-element1-text3">Friendly Match</p>                
-                </div>
-                <div class="blok1-element2">
-                    <img class="blok1-element2-img1" src="./img/arsenal-f-c-seeklogo.com.png" alt="">
-                    <img class="blok1-element2-img2" src="./img/chelsea-fc.png" alt="">
-                </div>
-                <div class="blok1-element3">
-                    <p class="blok1-element3-text1">Turn on all match notifications</p>
-                    <img class="blok1-element3-icon1" src="">
-                </div>
-            </div>    
-            <div class="blok1-element4">
-                <img class="blok1-element4-img1" src="./img/SAMPLE02.png" alt="">
-            </div>
-    </div> 
-    <div class="blok1-right">
-        <p class="blok1-2-text-1"> WHAT IT DOES </p>
-        <p class="blok1-2-text-2"> An Enhanced Football Experience </p>
-        <p class="blok1-2-text-3"> The Guardian Live Scores app is your go to app for live scores and watching Premier League goals… Get in there, what a result!
-            As well as videos of all the goals, you can watch match highlights, check out the latest scores and results and stay bang-up-to-date with the big football stories from The Guardian publication. </p>
-        <p class="blok1-2-text-4">Learn more</p>    
-    </div> --> 
-
-</div>                 
-</body>
+    <div class="container-md">
+      <div class="row">
+        <div class="col one"></div>
+        <div class="col two"></div>
+        <div class="col three"></div>
+      </div>
+    </div>
+    <div class="container-lg">
+      <div class="row">
+        <div class="col one"></div>
+        <div class="col two"></div>
+        <div class="col three"></div>
+      </div>
+    </div>
+    <div class="container-xl">
+      <div class="row">
+        <div class="col one"></div>
+        <div class="col two"></div>
+        <div class="col three"></div>
+      </div>
+    </div>
+    <div class="container-xxl">
+      <div class="row">
+        <div class="col one"></div>
+        <div class="col two"></div>
+        <div class="col three"></div>
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  </body>
 </html>
-
-
