bugs fixed homework07

--- a/homework07/index-hw07.html
+++ b/homework07/index-hw07.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles-hw07.css">
+    <link rel="stylesheet" href="./styles/resert.css">
+    <link rel="stylesheet" href="./styles/styles-hw07.css">
     <link href="https://fonts.cdnfonts.com/css/avenir" rel="stylesheet">   
     <link href="https://fonts.cdnfonts.com/css/helvetica-neue-9" rel="stylesheet">                      
     <title>homework07</title>
@@ -158,18 +159,40 @@
                 </div>
                 <div class="footer_2_column_2">
                     <h1 class="footer_2_column_2_text_1">About</h1>
-                    <p class="footer_2_column_2_text_2">Profile</p>
-                    <p class="footer_2_column_2_text_3">Features</p>   
-                    <p class="footer_2_column_2_text_4">Careers</p> 
-                    <p class="footer_2_column_2_text_5">DW News</p> 
+                    <ul class="footer_2_column_2_text">
+                        <li>
+                            <a class="footer_2_column_2_text_2">Profile</a>
+                        </li>
+                        <li>
+                            <a class="footer_2_column_2_text_2">Features</a>
+                        </li>
+                        <li>
+                            <a class="footer_2_column_2_text_2">Career</a>
+                        </li>
+                        <li>
+                            <a class="footer_2_column_2_text_2">DW News</a>
+                        </li> 
+                    </ul>
                 </div>
                 <div class="footer_2_column_3">
                     <h1 class="footer_2_column_3_text_1">Help</h1>
-                    <p class="footer_2_column_3_text_2">Support</p>
-                    <p class="footer_2_column_3_text_3">Sing up</p>   
-                    <p class="footer_2_column_3_text_4">Guide</p> 
-                    <p class="footer_2_column_3_text_5">Report</p> 
-                    <p class="footer_2_column_3_text_6">Q&A</p> 
+                    <ul class="footer_2_column_3_text">
+                        <li>
+                            <a class="footer_2_column_3_text_2">Support</a>
+                        </li>
+                        <li>
+                            <a class="footer_2_column_3_text_3">Sing up</a>
+                        </li>
+                        <li>
+                            <a class="footer_2_column_3_text_4">Guide</a>
+                        </li>
+                        <li>
+                            <a class="footer_2_column_3_text_5">Report</a>
+                        </li> 
+                        <li>
+                            <a class="footer_2_column_3_text_6">Q&A</a>
+                        </li> 
+                    </ul>
                 </div>
                 <div class="footer_2_column_4">
                     <p class="footer_2_column_4_text_1">Social Media</p>
