--- a/Test/index.html
+++ b/Test/index.html
@@ -8,41 +8,16 @@
     <link rel="stylesheet" href="./styles-test.css"/>
 </head>
   <body>
-    <div class="container-sm">
-      <div class="row">
-        <div class="col-12 col-md-8 col-lg-4 one"></div>
-        <div class="col-12 col-md-2 col-lg-4 two"></div>
-        <div class="col-12 col-md-2 col-lg-4 three"></div>
+    <div class="container">
+      <div class="blok1">
+        <div class="One">One</div>
+        <div class="Two">Two</div>
+      </div>
+      <div class="blok2">
+        <div class="there">there</div>
+        <div class="four">four</div>
+        <div class="five">five</div>
       </div>
     </div>
-    <div class="container-md">
-      <div class="row">
-        <div class="col one"></div>
-        <div class="col two"></div>
-        <div class="col three"></div>
-      </div>
-    </div>
-    <div class="container-lg">
-      <div class="row">
-        <div class="col one"></div>
-        <div class="col two"></div>
-        <div class="col three"></div>
-      </div>
-    </div>
-    <div class="container-xl">
-      <div class="row">
-        <div class="col one"></div>
-        <div class="col two"></div>
-        <div class="col three"></div>
-      </div>
-    </div>
-    <div class="container-xxl">
-      <div class="row">
-        <div class="col one"></div>
-        <div class="col two"></div>
-        <div class="col three"></div>
-      </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
